--- a/html/about.html
+++ b/html/about.html
@@ -5,29 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
-    <link rel="stylesheet" href="../css/main.css">
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../font/themify-icons/themify-icons.css">
+    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/font/themify-icons/themify-icons.css">
 </head>
 <body>
     <section id="header">
         <a href="#">
-            <img src="../img/logo.png" alt="" class="logo">
+            <img src="/img/logo.png" alt="" class="logo">
         </a>
         <div>
             <ul id="navbar">
-                <li><a  href="../html/index.html">Home</a></li>
-                <li><a  href="../html/shop.html">Shop</a></li>
-                <li><a  href="../html/blog.html">Blog</a></li>
-                <li><a  class="active" href="../html/about.html">About</a></li>
-                <li><a  href="../html/contact.html">Contact</a></li>
-                <li><a href="../html/login_singnup.html">Login|Sigup</a></li>
-                <li><a  href="../html/cart.html" id="lg-bag"><i class="ti-shopping-cart"></i></a></li>
+                <li><a  href="/index.html">Home</a></li>
+                <li><a  href="/html/shop.html">Shop</a></li>
+                <li><a  href="/html/blog.html">Blog</a></li>
+                <li><a  class="active" href="/html/about.html">About</a></li>
+                <li><a  href="/html/contact.html">Contact</a></li>
+                <li><a  href="/html/login_singnup.html">Login|Sigup</a></li>
+                <li><a  href="/html/cart.html" id="lg-bag"><i class="ti-shopping-cart"></i></a></li>
                 <a href="#" id="close"><i class="ti-close"></i></a>
             </ul>
         </div>
         <div id="mobile-nav">   
-             <li><a href="cart.html"><i class="ti-shopping-cart"></i></a></li>
+             <li><a href="/cart.html"><i class="ti-shopping-cart"></i></a></li>
              <i id="bar" class="ti-menu"></i>   
         </div>
     </section>
@@ -37,7 +37,7 @@
         <p>Lorem ipsum dolor sit amet, consectetur</p>
     </section>
     <section id="about-head" class="section-p1">
-        <img src="../img/about/a6.jpg" alt="">
+        <img src="/img/about/a6.jpg" alt="">
         <div>
             <h2>Who We Are</h2>
             <p>Babba C Rivera is a Swedish Latina currently living in New York City whose minimal, Scandinavian-inspired style has helped her to gather over 159,000 followers on Instagram alone—she’s so successful that she even found herself on the Forbes Under 30 list! If you’re looking for unique street-style inspiration, Babba’s page is the perfect place to look. She effortlessly mixes casual outfits with bright colours, statement pieces and killer accessories that would look great on everyone. Alongside her fashion content, Babba is also the resident Eco Beauty Expert at Vogue Scandinavia and has gone on to launch her own clean haircare range, inspired by her Latinx heritage, called Ceremonia</p>
@@ -56,32 +56,32 @@
     <section id="about-app" class="section-p1">
         <h1>Dowload Our <a href="">App</a></h1>
         <div class="video">
-            <video autoplay muted loop  src="../img/about/1.mp4"></video>
+            <video autoplay muted loop  src="/img/about/1.mp4"></video>
         </div>
     </section>
     <section id="feature" class="section-p1">
         <div class="fe-box">
-            <img src="../img/features/f1.png" alt="">
+            <img src="/img/features/f1.png" alt="">
             <h6>Free Shipping</h6>
         </div>
         <div class="fe-box">
-            <img src="../img/features/f2.png" alt="">
+            <img src="/img/features/f2.png" alt="">
             <h6>Online Order</h6>
         </div>
         <div class="fe-box">
-            <img src="../img/features/f3.png" alt="">
+            <img src="/img/features/f3.png" alt="">
             <h6>Save money</h6>
         </div>
         <div class="fe-box">
-            <img src="../img/features/f4.png" alt="">
+            <img src="/img/features/f4.png" alt="">
             <h6>Promotions</h6>
         </div>
         <div class="fe-box">
-            <img src="../img/features/f5.png" alt="">
+            <img src="/img/features/f5.png" alt="">
             <h6>Happy sell</h6>
         </div>
         <div class="fe-box">
-            <img src="../img/features/f6.png" alt="">
+            <img src="/img/features/f6.png" alt="">
             <h6>F24/7 support</h6>
         </div>
     </section>
@@ -99,7 +99,7 @@
     </section>
     <footer class="section-p1">
         <div class="col">
-            <img class="logo" src="/img/logo.png" alt="">
+            <img class="logo" src="../img/" alt="">
             <h4>Contact</h4>
             <p><strong>Address:</strong> 562 Wellington Road, Street 32, San Francisco</p>
             <p><strong>Phone:</strong>+01 2222 365/ (+91) 01 2345 6789</p>
