--- a/index.html
+++ b/index.html
@@ -5,24 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ecomerce Toutorial</title>
-    <link rel="stylesheet" href="../css/main.css">
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../font/themify-icons/themify-icons.css">
+    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./font/themify-icons/themify-icons.css">
 </head>
 <body>
     <section id="header">
         <a href="#">
-            <img src="../img/logo.png" alt="" class="logo">
+            <img src="./img/logo.png" alt="" class="logo">
         </a>
         <div>
             <ul id="navbar">
-                <li><a class="active" href="../html/index.html">Home</a></li>
-                <li><a href="../html/shop.html">Shop</a></li>
-                <li><a href="../html/blog.html">Blog</a></li>
-                <li><a href="../html/about.html">About</a></li>
-                <li><a href="../html/contact.html">Contact</a></li>
-                <li><a href="../html/login_singnup.html">Login|Sigup</a></li>
-                <li><a href="../html/cart.html" id="lg-bag"><i class="ti-shopping-cart"></i></a></li>
+                <li><a class="active" href="./index.html">Home</a></li>
+                <li><a href="./html/shop.html">Shop</a></li>
+                <li><a href="./html/blog.html">Blog</a></li>
+                <li><a href="./html/about.html">About</a></li>
+                <li><a href="./html/contact.html">Contact</a></li>
+                <li><a href="./html/login_singnup.html">Login|Sigup</a></li>
+                <li><a href="./html/cart.html" id="lg-bag"><i class="ti-shopping-cart"></i></a></li>
                 <a href="#" id="close"><i class="ti-close"></i></a>
             </ul>
         </div>
@@ -42,27 +42,27 @@
     </section>
     <section id="feature" class="section-p1">
         <div class="fe-box">
-            <img src="../img/features/f1.png" alt="">
+            <img src="./img/features/f1.png" alt="">
             <h6>Free Shipping</h6>
         </div>
         <div class="fe-box">
-            <img src="../img/features/f2.png" alt="">
+            <img src="./img/features/f2.png" alt="">
             <h6>Online Order</h6>
         </div>
         <div class="fe-box">
-            <img src="../img/features/f3.png" alt="">
+            <img src="./img/features/f3.png" alt="">
             <h6>Save money</h6>
         </div>
         <div class="fe-box">
-            <img src="../img/features/f4.png" alt="">
+            <img src="./img/features/f4.png" alt="">
             <h6>Promotions</h6>
         </div>
         <div class="fe-box">
-            <img src="../img/features/f5.png" alt="">
+            <img src="./img/features/f5.png" alt="">
             <h6>Happy sell</h6>
         </div>
         <div class="fe-box">
-            <img src="../img/features/f6.png" alt="">
+            <img src="./img/features/f6.png" alt="">
             <h6>F24/7 support</h6>
         </div>
     </section>
@@ -71,7 +71,7 @@
         <p>Summer colection New Morden Design</p>
         <div class="pro-container">
             <div class="pro">
-                <img src="../img/products/f1.jpg" alt="">
+                <img src="./img/products/f1.jpg" alt="">
                 <div class="des">
                     <span>adidas</span>
                     <h5>Cartoon Astronaut T-shirts</h5>
@@ -87,7 +87,7 @@
                     <a href=""><i class="cart ti-shopping-cart-full"></i></a>
             </div>
             <div class="pro">
-                <img src="../img/products/f2.jpg" alt="">
+                <img src="./img/products/f2.jpg" alt="">
                 <div class="des">
                     <span>adidas</span>
                     <h5>Cartoon Astronaut T-shirts</h5>
@@ -103,7 +103,7 @@
                     <a href=""><i class="cart ti-shopping-cart-full"></i></a>
             </div>
             <div class="pro">
-                <img src="../img/products/f3.jpg" alt="">
+                <img src="./img/products/f3.jpg" alt="">
                 <div class="des">
                     <span>adidas</span>
                     <h5>Cartoon Astronaut T-shirts</h5>
@@ -119,7 +119,7 @@
                     <a href=""><i class="cart ti-shopping-cart-full"></i></a>
             </div>
             <div class="pro">
-                <img src="../img/products/f4.jpg" alt="">
+                <img src="./img/products/f4.jpg" alt="">
                 <div class="des">
                     <span>adidas</span>
                     <h5>Cartoon Astronaut T-shirts</h5>
@@ -135,7 +135,7 @@
                     <a href=""><i class="cart ti-shopping-cart-full"></i></a>
             </div>
             <div class="pro">
-                <img src="../img/products/f5.jpg" alt="">
+                <img src="./img/products/f5.jpg" alt="">
                 <div class="des">
                     <span>adidas</span>
                     <h5>Cartoon Astronaut T-shirts</h5>
@@ -151,7 +151,7 @@
                     <a href=""><i class="cart ti-shopping-cart-full"></i></a>
             </div>
             <div class="pro">
-                <img src="../img/products/f6.jpg" alt="">
+                <img src="./img/products/f6.jpg" alt="">
                 <div class="des">
                     <span>adidas</span>
                     <h5>Cartoon Astronaut T-shirts</h5>
@@ -167,7 +167,7 @@
                     <a href=""><i class="cart ti-shopping-cart-full"></i></a>
             </div>
             <div class="pro">
-                <img src="../img/products/f7.jpg" alt="">
+                <img src="./img/products/f7.jpg" alt="">
                 <div class="des">
                     <span>adidas</span>
                     <h5>Cartoon Astronaut T-shirts</h5>
@@ -183,7 +183,7 @@
                     <a href=""><i class="cart ti-shopping-cart-full"></i></a>
             </div>
             <div class="pro">
-                <img src="../img/products/f8.jpg" alt="">
+                <img src="./img/products/f8.jpg" alt="">
                 <div class="des">
                     <span>adidas</span>
                     <h5>Cartoon Astronaut T-shirts</h5>
@@ -212,7 +212,7 @@
         <p>Summer colection New Morden Design</p>
         <div class="pro-container">
             <div class="pro">
-                <img src="../img/products/n1.jpg" alt="">
+                <img src="./img/products/n1.jpg" alt="">
                 <div class="des">
                     <span>adidas</span>
                     <h5>Cartoon Astronaut T-shirts</h5>
@@ -228,7 +228,7 @@
                     <a href=""><i class="cart ti-shopping-cart-full"></i></a>
             </div>
             <div class="pro">
-                <img src="../img/products/n2.jpg" alt="">
+                <img src="./img/products/n2.jpg" alt="">
                 <div class="des">
                     <span>adidas</span>
                     <h5>Cartoon Astronaut T-shirts</h5>
@@ -244,7 +244,7 @@
                     <a href=""><i class="cart ti-shopping-cart-full"></i></a>
             </div>
             <div class="pro">
-                <img src="../img/products/n3.jpg" alt="">
+                <img src="./img/products/n3.jpg" alt="">
                 <div class="des">
                     <span>adidas</span>
                     <h5>Cartoon Astronaut T-shirts</h5>
@@ -260,7 +260,7 @@
                     <a href=""><i class="cart ti-shopping-cart-full"></i></a>
             </div>
             <div class="pro">
-                <img src="../img/products/n4.jpg" alt="">
+                <img src="./img/products/n4.jpg" alt="">
                 <div class="des">
                     <span>adidas</span>
                     <h5>Cartoon Astronaut T-shirts</h5>
@@ -276,7 +276,7 @@
                     <a href=""><i class="cart ti-shopping-cart-full"></i></a>
             </div>
             <div class="pro">
-                <img src="../img/products/n5.jpg" alt="">
+                <img src="./img/products/n5.jpg" alt="">
                 <div class="des">
                     <span>adidas</span>
                     <h5>Cartoon Astronaut T-shirts</h5>
@@ -292,7 +292,7 @@
                     <a href=""><i class="cart ti-shopping-cart-full"></i></a>
             </div>
             <div class="pro">
-                <img src="../img/products/n6.jpg" alt="">
+                <img src="./img/products/n6.jpg" alt="">
                 <div class="des">
                     <span>adidas</span>
                     <h5>Cartoon Astronaut T-shirts</h5>
@@ -308,7 +308,7 @@
                     <a href=""><i class="cart ti-shopping-cart-full"></i></a>
             </div>
             <div class="pro">
-                <img src="../img/products/n7.jpg" alt="">
+                <img src="./img/products/n7.jpg" alt="">
                 <div class="des">
                     <span>adidas</span>
                     <h5>Cartoon Astronaut T-shirts</h5>
@@ -324,7 +324,7 @@
                     <a href=""><i class="cart ti-shopping-cart-full"></i></a>
             </div>
             <div class="pro">
-                <img src="../img/products/n8.jpg" alt="">
+                <img src="./img/products/n8.jpg" alt="">
                 <div class="des">
                     <span>adidas</span>
                     <h5>Cartoon Astronaut T-shirts</h5>
@@ -385,7 +385,7 @@
     </section>
     <footer class="section-p1">
         <div class="col">
-            <img class="logo" src="/img/logo.png" alt="">
+            <img class="logo" src="./img/logo.png" alt="">
             <h4>Contact</h4>
             <p><strong>Address:</strong> 562 Wellington Road, Street 32, San Francisco</p>
             <p><strong>Phone:</strong>+01 2222 365/ (+91) 01 2345 6789</p>
@@ -421,11 +421,11 @@
             <h4>Install App</h4>
             <p>From App store or Google Play</p>
             <div class="row">
-                <img src="../img/pay/app.jpg" alt="">
-                <img src="../img/pay/play.jpg" alt="">
+                <img src="./img/pay/app.jpg" alt="">
+                <img src="./img/pay/play.jpg" alt="">
             </div>
             <p>Secured Payment Gateways</p>
-            <img src="../img/pay/pay.png" alt="">
+            <img src="./img/pay/pay.png" alt="">
         </div>
         
     </footer>
